# matchmaps

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  about.html  cli.html  diagnose.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  renovate.json  search.html  searchindex.js  setup.py  tox.ini  troubleshooting.html  visualization.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_docs.yml  ci.yml  cron.yml  test_docs.yml
_sources/: about.md  cli.md  cli.rst  diagnose.md  index.md  quickstart.md  troubleshooting.md  visualization.md
_static/: documentation_options.js
docs/: about.md  cli.md  cli.rst  conf.py  contributing.md  diagnose.md  index.md  quickstart.md  troubleshooting.md  visualization.md
src/matchmaps/: __init__.py  _args.py  _compute_mr_diff.py  _compute_ncs_diff.py  _compute_nonisomorphous_diff.py  _compute_realspace_diff.py  _diagnostic_plots.py  _parsers.py  _phenix_utils.py  _utils.py  _version_util.py
tests/: conftest.py  test_cli.py  test_gemmi.py  test_parse_args.py  test_phenix_utilities.py  test_validate_column_dtypes.py  test_validate_environment.py  test_validate_inputs.py
tests/data/: 1rx2_phases.mtz
tests/data/mm_intermediates/: 1rx2_phases_trunc_rbr_to_self_1_1.mtz  1rx4_phases_scaled_truecell_rbr_to_1rx2_nospecialpositions_renumbered_1_1.mtz
tests/data/raw_data/: 1rx4_phases.mtz  7mm1_phases.mtz  7rin_phases.mtz
