# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "matchmaps"
# versioning through releases
description = "Make unbiased difference maps even for non-isomorphous inputs"
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "debrookner@gmail.com", name = "Dennis Brookner" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
    "numpy>=2, <=2.1",
    "tqdm",
    "reciprocalspaceship>=1.0.4, <=1.0.5",
    "rs-booster>=0.1.2, <= 0.1.2",
    "gemmi>=0.7.0, <=0.7.2"
]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov"]
dev = [
    "black",
    "ipython",
    "mypy",
    "pdbpp",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "rich",
    "ruff",
]
docs = [
    "sphinx",
    "myst_parser",
    "sphinxcontrib_autoprogram",
    "sphinx_rtd_theme"
]

[project.urls]
homepage = "https://rs-station.github.io/matchmaps/"
repository = "https://github.com/rs-station/matchmaps"

# same as console_scripts entry point
[project.scripts]
matchmaps = "matchmaps._compute_realspace_diff:main"
"matchmaps.ncs" = "matchmaps._compute_ncs_diff:main"
"matchmaps.mr" = "matchmaps._compute_mr_diff:main"
"matchmaps.version" = "matchmaps._version_util:main"
"matchmaps.diagnose" = "matchmaps._diagnostic_plots:main"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# # this can be deleted once a new rs-booster version has been released
# [tool.hatch.metadata]
# allow-direct-references = true
